--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "phonegap": "*",
 
     "grunt": "~0.4.2",
-    "grunt-contrib-concat": "0.4.0"
+    "grunt-contrib-concat": "0.4.0",
+    "grunt-contrib-copy": "0.4.0",
+
+    "grunt-processhtml": "0.3.3"
   }
 }
